(Enhancement) Improve Translations within different the esms

--- a/packages/esm-covid-app/translations/en.json
+++ b/packages/esm-covid-app/translations/en.json
@@ -9,13 +9,12 @@
   "lastDoseAdministered": "Last Dose Administered",
   "noPatientList": "There are no patients in this list.",
   "outcome": "Outcome",
-  "outcomeAge": "Age",
-  "outcomeAssessmentDate": "AssessmentDate Date",
-  "outcomeDate": "OutcomeDate Date",
-  "outcomeName": "Name",
-  "outcomeOutcome": "Outcome",
-  "outcomePresentation": "Presentation",
-  "outcomeSex": "Sex",
+  "Age": "Age",
+  "AssessmentDate": "AssessmentDate Date",
+  "outcomeDate": "Outcome Date",
+  "Name": "Name",
+  "Presentation": "Presentation",
+  "Sex": "Sex",
   "patientStatus": "Patient status",
   "pendingLabResults": "Pending lab results",
   "peopleTestedPositive": "People tested positive",
@@ -34,12 +33,11 @@
   "testDate": "Test Date",
   "testsConducted": "Completed assessments",
   "testType": "Test Type",
-  "vaccinationAge": "Age",
   "vaccinationLastVaccineAdmin": "Last Vaccine Administered",
   "vaccinationLastVaccineDoseAdmin": "Last Vaccine Dose Administered",
   "vaccinationName": "Name",
-  "vaccinationSearchList": "Search client list",
-  "vaccinationsex": "Sex",
   "vaccinationStatus": "Vaccination Status",
-  "vaccine": "Vaccine"
+  "vaccine": "Vaccine",
+  "outcomeStatus": "Outcome Status",
+  "vaccineAdministered": "Vaccine Administered"
 }
