--- a/packages/esm-covid-app/locales/fr/translation.json
+++ b/packages/esm-covid-app/locales/fr/translation.json
@@ -1,12 +1,4 @@
 {
-  "encounterDate": "Encounter Date",
-  "sarsCovidTestType": "SARS-Cov2 test type",
-  "dateOfLastTest": "Date of last test",
-  "result": "Result",
-  "reasonsForTesting": "Reasons for testing",
-  "vaccinationStatus": "Vaccination Status",
-  "patientStatus": "Patient status",
-  "covidLabResults": "Lab Results",
   "allCTClients": "All COVID-19 Clients",
   "editAssessmentForm": "Edit case assessment form",
   "assessmentDate": "Assessment date",
@@ -19,27 +11,24 @@
   "lastDoseAdministered": "Last Dose Administered",
   "vaccine": "Vaccine",
   "returnVisitDate": "Return Visit Date",
-  "summaryAssessments": "Assessments",
+  "assessments": "Assessments",
   "testsConducted": "Completed assessments",
-  "summaryCases": "Cases",
+  "cases": "Cases",
   "peopleTestedPositive": "People tested positive",
-  "summaryVaccinations": "Vaccinations",
+  "vaccinations": "Vaccinations",
   "peopleVaccinated": "People vaccinated",
-  "summaryOutcomes": "Outcomes",
+  "outcomes": "Outcomes",
   "PeopleWithCovidOutcome": "People with covid outcome",
-  "outcomeName": "Name",
-  "outcomeSex": "Sex",
-  "outcomeAge": "Age",
-  "outcomeAssessmentDate": "AssessmentDate Date",
-  "outcomePresentation": "Presentation",
-  "outcomeOutcome": "Outcome",
+  "name": "Name",
+  "sex": "Sex",
+  "age": "Age",
+  "AssessmentDate": "AssessmentDate Date",
+  "presentation": "Presentation",
   "outcomeDate": "OutcomeDate Date",
   "searchClientList": "Search client list",
   "noPatientList": "There are no patients in this list.",
   "vaccinationName": "Name",
-  "vaccinationsex": "Sex",
-  "vaccinationAge": "Age",
+  "Age": "Age",
   "vaccinationLastVaccineAdmin": "Last Vaccine Administered",
-  "vaccinationLastVaccineDoseAdmin": "Last Vaccine Dose Administered",
-  "vaccinationSearchList": "Search client list"
+  "vaccinationLastVaccineDoseAdmin": "Last Vaccine Dose Administered"
 }
