update covid and hiv translations

--- a/packages/esm-covid-app/translations/en.json
+++ b/packages/esm-covid-app/translations/en.json
@@ -1,65 +1,34 @@
 {
-  "actions": "Actions",
-  "addEditOutcome": "Add/Edit Outcome",
-  "addEditResult": "Add/Edit Lab Result",
   "age": "Age",
   "Age": "Age",
   "allCTClients": "All COVID-19 Clients",
   "assessmentDate": "Assessment date",
   "AssessmentDate": "AssessmentDate Date",
   "assessments": "Assessments",
-  "cancelLabOrder": "Cancel Lab Order",
   "cases": "Cases",
-  "collectSample": "Collect Sample",
-  "covid_Assessments_Display": "COVID Assessment",
-  "covid_Assessments_Header": "COVID Assessment",
-  "covid_Outcomes_display": "COVID Outcomes",
-  "covid_Outcomes_header": "COVID Outcomes",
-  "covid_Vaccinations_display": "Vaccinations",
-  "covid_Vaccinations_header": "Vaccinations",
-  "covidLabResults": "Lab Results",
-  "dateOfAssessment": "Date of Assessment",
-  "dateOfOrder": "Date of Order",
-  "dateOfTestResult": "Date of Test Result",
-  "editassessmentCase": "Edit Case",
   "editAssessmentForm": "Edit case assessment form",
   "finalResults": "Final result",
-  "fowardLabreference": "Fowarded to Reference Lab",
-  "labTests": "Lab Tests",
   "lastDoseAdministered": "Last Dose Administered",
   "name": "Name",
   "noPatientList": "There are no patients in this list.",
   "outcome": "Outcome",
   "outcomeDate": "Outcome Date",
   "outcomes": "Outcomes",
-  "outcomeStatus": "Outcome Status",
-  "pendingLabOrders": "Pending Lab Orders",
   "pendingLabResults": "Pending lab results",
   "peopleTestedPositive": "People tested positive",
   "peopleVaccinated": "People vaccinated",
   "PeopleWithCovidOutcome": "People with covid outcome",
   "presentation": "Presentation",
-  "reasonsForTesting": "Reasons for testing",
   "returnVisitDate": "Return Visit Date",
   "scheduledVaccination": "Scheduled Vaccination",
   "searchClientList": "Search client list",
   "sex": "Sex",
-  "status": "Status",
-  "symptomatic": "Presentation",
   "testDate": "Test Date",
-  "testResult": "Test Result",
   "testsConducted": "Completed assessments",
   "testType": "Test Type",
-  "vaccinationDate": "Vaccination Date",
   "vaccinationLastVaccineAdmin": "Last Vaccine Administered",
   "vaccinationLastVaccineDoseAdmin": "Last Vaccine Dose Administered",
   "vaccinationName": "Name",
   "vaccinations": "Vaccinations",
-  "vaccine": "Vaccine",
-  "vaccineAdministered": "Vaccine Administered",
-  "vaccineDose": "Vaccine Dose",
-  "vaccineSeries": "Vaccine Series",
-  "viewAssessment": "View Case",
-  "viewAssessmentcase": "View Assessment",
-  "viewDetails": "View Details"
+  "vaccine": "Vaccine"
 }
